--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,14 @@ body {
   background-color: lightcoral;
 }
 .checkbox {
-  font-size: 18px;
+  font-size: 16px;
   font-family: fantasy;
-  font-weight: bolder;
 }
 .jumbotron {
   font-family: times new roman;
-
+}
+.well {
+  background-color: #eee;
 }
 h3 {
   font-family: times new roman;
@@ -16,6 +17,7 @@ h3 {
 }
 #user-input {
   font-size: 18px;
+  background-color: #eee;
 }
 .btn {
   font-size: 20px;
